# MemoLanes

./: .gitignore  LICENSE  README.md
.github/: CONTRIBUTING.md
.github/workflows/: app.yml  ci.yml  flutter_ci.yml  rust_ci.yml  wasm.yml
app/: .env.example  .flutter_rust_bridge.yml  .gitignore  .netrc  Justfile  analysis_options.yaml  envgen.py  frb_generated.h  pubspec.yaml  set_env.py  setup_token.py
app/android/: .gitignore  build.gradle  build.gradle.kts  gradle.properties
app/ios/: Podfile
app/journey_kernel/: .gitignore  Cargo.toml  README-debug.md  README.md  compatibility.md  package.json  tsconfig.json  webpack.config.js
app/journey_kernel/examples/: journey-canvas-layer.js  journey-sw.js  journey-view.html  journey_view.html
app/journey_kernel/src/: bitmap2d.rs  journey_bitmap.rs  lib.rs  tile_archive.rs  tile_buffer.rs  tile_iter.rs  tile_range.rs  tile_shader.rs  tile_shader2.rs  utils.rs  wasm.rs
app/journey_kernel/src/wasm/: mod.rs  tile_buffer.rs
app/journey_kernel/static/: DebugPanel.ts  MultiRequest.ts  debug-panel.css  debug-panel.js  debug-panel.ts  flutter-bridge-editor.ts  flutter-bridge.ts  index.html  index.js  index.ts  journey-canvas-layer.js  journey-tile-provider.js  journey-tile-provider.ts  journey-view.html  lru-cache.js  map-controller.ts  multi-requests.ts  multirequest.js  params.ts  platform.ts  render_diagnostics.js  render_diagnostics.ts  render_diagnostics_template.html  utils.js  utils.ts
app/journey_kernel/static/layers/: JourneyCanvasLayer.ts  journey-canvas-layer.ts  journey-layer-interface.ts  utils.ts
app/journey_kernel/tests/: serdes.rs
app/lib/: .gitignore  achievement.dart  gps.dart  (+32 more)
app/native/: .gitignore  Cargo.toml  build.rs
app/native/src/: .gitignore  api.rs  archive.rs  bridge_generated.io.rs  bridge_generated.rs  bridge_generated.web.rs  gps_processor.rs  import_data.rs  journey_bitmap.rs  journey_data.rs  journey_header.rs  journey_vector.rs  lib.rs  main_db.rs  map_renderer.rs  merged_journey_manager.rs  storage.rs  tile_renderer.rs  utils.rs
app/native/src/protos/: archive.proto  journey.proto
app/native/tests/: archive.rs  end_to_end.rs  gps_filter.rs  gps_processor.rs  import_data.rs  journey_bitmap.rs  journey_data.rs  load_test_data.rs  main_db.rs  map_renderer.rs  test_utils.rs
app/native/tests/data/: raw_gps_shanghai.csv
app/native/tests/test_utils/: mod.rs
app/rust/: .gitignore  Cargo.toml  build.rs
app/rust/benches/: achievement.rs  bench.rs  cache.rs  rendering.rs
app/rust/examples/: README.md  app.rs  jbm_tool.rs  server.rs
app/rust/examples/shared/: map_server.rs  mod.rs
app/rust/geo_data_format/: Cargo.toml
app/rust/geo_data_format/src/: format.rs  lib.rs  packed_tile.rs  pov.rs  types.rs  worldview_variant.rs
app/rust/src/: archive.rs  cache_db.rs  export_data.rs  flight_track_processor.rs  frb_generated.io.rs  frb_generated.rs  frb_generated.web.rs  geo.rs  gps_processor.rs  gpx_file_utils.rs  graphics.rs  import_data.rs  journey_area_utils.rs  journey_bitmap.rs  journey_data.rs  journey_date_picker.rs  journey_header.rs  journey_snapshot.rs  journey_vector.rs  kernel.wgsl  lib.rs  lng_arc.rs  logs.rs  main_db.rs  map_renderer.rs  merged_journey_builder.rs  merged_journey_manager.rs  preclean.rs  storage.rs  tile_renderer.rs  utils.rs
app/rust/src/achievement/: active.rs  composites.rs  contract.rs  coverage.rs  explored_area.rs  geo_entity.rs  geo_lookup.rs  journey.rs  layer.rs  mod.rs  poi.rs  query.rs  region.rs  scope.rs  stat_cache.rs  test_strategies.rs  time_bucket.rs
app/rust/src/achievement/backend/: mod.rs  on_demand.rs
app/rust/src/achievement/compute/: explored_area.rs  mod.rs  region_state.rs
app/rust/src/achievement/geo_lookup_storage/: mod.rs  plain.rs
app/rust/src/achievement/read_model/: mod.rs  region.rs
app/rust/src/api/: achievement.rs  api.rs  edit_session.rs  import.rs  mod.rs  utils.rs
app/rust/src/blur/: README.md  fastblur.rs  mod.rs
app/rust/src/cache_db/: cache_db_v1.rs  mod.rs
app/rust/src/export_data/: fow.rs  gpx.rs  kml.rs  mod.rs
app/rust/src/protos/: archive.proto  journey.proto  raw_data.proto
app/rust/src/renderer/: internal_server.rs  kernel.wgsl  map_renderer.rs  map_server.rs  mod.rs  tile_renderer_basic.rs  tile_renderer_oss.rs  tile_shader.rs  tile_shader2.rs  utils.rs
app/rust/tests/: Import_export_data.rs  achievement_area.rs  achievement_on_demand.rs  achievement_properties.rs  achievement_stat_cache.rs  api_achievement.rs  archive.rs  cache_db.rs  cache_db_compute.rs  end_to_end.rs  flight_track_processor.rs  fow_snapshot_export.rs  geo_data_smoke.rs  geo_lookup.rs  geo_real_asset.rs  gps_preprocessor.rs  gps_processor.rs  import_data.rs  import_export_data.rs  journey_area_utils.rs  journey_bitmap.rs  main_db.rs  map_renderer.rs  merged_journey_builder.rs  merged_journey_manager.rs  region_api.rs  region_ground_truth.rs  region_index.rs  renderer_server.rs  sort.rs  storage.rs
app/rust/tests/data/: 2024-08-24-2104.kml  2bulu.gpx  2bulu.kml  StepOfMyWorld.gpx  flight_TV9882-3bf27ed6.kml  flight_tokyo_hawaii.kml  nelson_to_wharariki_beach.gpx  raw_data.csv  raw_gps_heihe.gpx  raw_gps_laojunshan.gpx  raw_gps_laojunshan.kml  raw_gps_shanghai.csv  raw_gps_shanghai.gpx  raw_gps_shenzhen_stationary.gpx  snapshot_no_bitmap.fwss  snapshot_test.fwss  yourapp.gpx
app/rust/tests/data/interpolate/: CHH7867_XIAN_HANGZHOU.kml  CSN3281_TwoPoint.kml  interpolate.kml  interpolatecross180.kml  tokyo_hawaii.kml  tokyo_hawaii2.kml
app/rust/tests/test_utils/: mod.rs  render_utils.rs
tools/geo_rasterizer/: .gitignore  Cargo.toml  README.md  geo_entity_registry.toml  worldviews.toml
tools/geo_rasterizer/natural_earth/: README.md
tools/geo_rasterizer/src/: area.rs  atomic_write.rs  cache.rs  download.rs  entities.rs  lib.rs  main.rs  parse.rs  projection.rs  rasterize.rs  registry.rs
tools/geo_rasterizer/tests/: area.rs  atomic_write.rs  cache.rs  entities.rs  golden.rs  parse.rs  projection.rs  rasterize.rs
tools/geo_rasterizer/tests/fixtures/: synthetic.geojson  synthetic_registry.toml  worldviews.toml
(+177 files in other folders)
