[package]
name = "journey_kernel"
version = "0.1.2"
edition = "2021"
description = "journey_kernel is a shared library for WebView and native part of the MemoLanes app."
license = "GPL-3.0"

[lib]
crate-type = ["lib", "cdylib"]

[features]

wasm = ["wasm-bindgen", "console_error_panic_hook", "wasm-bindgen-futures"]
console_error_panic_hook = ["dep:console_error_panic_hook"]

[dependencies]
wasm-bindgen = { version = "0.2", optional = true }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1", optional = true }

serde = { version = "1.0", features = ["derive"] }
wasm-bindgen-futures = { version = "0.4", optional = true }
bincode = "1.0"
bitvec = { version = "1.0.1", features = ["serde"] }
