[package]
name = "native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
anyhow = "1"
chrono = "0.4.26"
flutter_rust_bridge = { version = "1", features = ["zero-copy"] }
log = "0.4.19"
rusqlite = { version = "0.29.0", features = ["bundled"] }
simplelog = "0.12.1"
tiny-skia = "0.11.1"
protobuf = "3"
uuid = { version = "1.4", features = ["v4", "fast-rng", "macro-diagnostics"] }
sql_split = "0.1.1"
zstd = "0.12"

[dev-dependencies]
sha1 = "0.10.5"
hex = "0.4.3"
tempdir = "0.3.7"
csv = "1.1"

[build-dependencies]
protobuf-codegen = "3"