[package]
name = "memolanes_core"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
journey_kernel = { path = "../journey_kernel" }
anyhow = { version = "1.0", features = ["backtrace"] }
chrono = "0.4"
flutter_rust_bridge = { version = "=2.11.1", features = ["chrono"] }
log = "0.4"
rusqlite = { version = "0.37", features = ["bundled"] }
simplelog = "0.12"
protobuf = "3.7"
uuid = { version = "1.18", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
sql_split = "0.1"
zstd = "0.13"
itertools = "0.14"
strum = "0.27"
strum_macros = "0.27"
random-string = "1.1"
zip = "5.1"
sha1 = "0.10"
hex = "0.4"
integer-encoding = "4.0"
flate2 = "1.1"
# https://github.com/georust/gpx/issues/105
gpx = { git = "https://github.com/MemoLanes/gpx.git", branch = "relax-parsing" }
# TODO: there is a breaking change in `kml = 0.9`. 
kml = "0.8"
lazy_static = "1.5"
geo-types = "0.7"
file-rotate = "0.8"
serde_json = "1.0"
rand = "0.9"
actix = "0.13"
actix-web-actors = "4.3"
actix-web = "4.11"
serde = "1.0"
tokio = { version = "1.47", features = ["full"] }
ctrlc = "3.5"
pollster = "0.4.0"
splines = { version = "5.0.0" }
base64 = "0.22.1"
serde_with = { version = "3.14", features = ["base64"] }
quick-xml = "0.37"
bitvec = "1.0.1"
auto-context = "0.1.1"

[dev-dependencies]
tempdir = "0.3"
csv = "1.3"
rand = "0.9"
assert_float_eq = "1.1"
criterion = "0.7"
sha2 = "0.10"
serde_json = "1.0"
crossterm = "0.29"
env_logger = "0.11"
image = "0.25"

[build-dependencies]
protobuf-codegen = "3.7"
cargo_toml = "0.22"

[[bench]]
name = "bench"
harness = false

[[bench]]
name = "rendering"
harness = false

[lints.rust]
# cleanup lints
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
