[package]
name = "memolanes_core"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
journey_kernel = { path = "../journey_kernel" }
geo_data_format = { path = "geo_data_format" }
anyhow = { version = "1.0", features = ["backtrace"] }
chrono = "0.4"
flutter_rust_bridge = { version = "=2.12.0", features = ["chrono"] }
log = "0.4"
rusqlite = { version = "0.39", features = ["bundled"] }
simplelog = "0.12"
protobuf = "3.7"
uuid = { version = "1.23", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
sql_split = "0.1"
zstd = "0.13"
itertools = "0.14"
strum = "0.28"
strum_macros = "0.28"
random-string = "1.1"
zip = "8.6"
sha1 = "0.11"
md-5 = "0.10"
hex = "0.4"
integer-encoding = "4.1"
flate2 = "1.1"
# https://github.com/georust/gpx/issues/105
gpx = { git = "https://github.com/MemoLanes/gpx.git", branch = "relax-parsing" }
kml = "0.13"
lazy_static = "1.5"
geo-types = "0.7"
file-rotate = "0.8"
serde_json = "1.0"
rand = "0.10"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.52", features = ["full"] }
splines = { version = "5.0.0" }
base64 = "0.22.1"
serde_with = { version = "3.20", features = ["base64"] }
quick-xml = "0.40"
bitvec = "1.0.1"
auto-context = "0.1.1"
csv = "1.4"
time= "0.3"
either = "1.16.0"

[dev-dependencies]
tempdir = "0.3"
rand = "0.10"
assert_float_eq = "1.2"
criterion = "0.8"
sha2 = "0.11"
serde_json = "1.0"
env_logger = "0.11"
image = "0.25"
clap = { version = "4", features = ["derive"] }
# HTTP server dependencies (only used in examples)
actix = "0.13"
actix-web-actors = "4.3"
actix-web = "4.13"
ctrlc = "3.5"
pollster = "0.4.0"
qr2term = "0.3"

[build-dependencies]
protobuf-codegen = "3.7"
cargo_toml = "0.22"

[[bench]]
name = "bench"
harness = false

[[bench]]
name = "rendering"
harness = false

[[bench]]
name = "cache"
harness = false

[lints.rust]
# cleanup lints
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
