[package]
name = "geo_rasterizer"
version = "0.1.0"
edition = "2021"
description = "Offline tool: converts Natural Earth GeoJSON into geo_data.bin geo reference data"

[lib]
path = "src/lib.rs"

[[bin]]
name = "geo_rasterizer"
path = "src/main.rs"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
sha2 = "0.10"
clap = { version = "4", features = ["derive"] }
geo = "=0.28.0"
geo-types = "=0.7.13"
geojson = "=0.24.1"
fs2 = "0.4"
tempfile = "3"
indicatif = "0.17"
ureq = { version = "2.10", default-features = false, features = ["tls"] }
geo_data_format = { path = "../../app/rust/geo_data_format" }

[profile.release]
codegen-units = 1
