[package]
name = "geo_data_format"
version = "0.1.0"
edition = "2021"
description = "On-disk binary format for MemoLanes geo reference data; shared by the runtime and the offline rasterizer."

[dependencies]
serde = { version = "1", features = ["derive"] }
bincode = "=1.3.3"
sha2 = "0.10"
anyhow = "1"
zstd = "0.13"

[dev-dependencies]
proptest = "1"
